# flipper-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
flipper_mcp/: __init__.py  bridge.py  registry.py  registry_cli.py  server.py  ui.py
flipper_mcp/protocols/: came-atomo.json  em4100.json  faac-slh.json  hormann-hsm.json  ht12.json  keeloq.json  nec-ir.json  nice-flo.json  princeton.json  samsung32-ir.json  security-plus-2.json  sony-ir.json  tpms-generic.json
tests/: test_classifier.py  test_registry.py  test_registry_remote.py  test_ui.py
