[project]
name = "flipper-mcp"
version = "0.1.0"
description = "MCP server for driving a Flipper Zero over USB-CDC serial."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2",
  "pyserial>=3.5",
]

[project.scripts]
flipper-mcp = "flipper_mcp.server:run"
flipper-smoke = "flipper_mcp.bridge:smoke"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flipper_mcp"]
